@@ -1,3 +1,7 @@
+2009-05-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* urlget.py: Added the copyright notice.
+
 2009-05-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* preferences.py, autostart.py, gphotoframe.glade: Added support
